Fixed name position for better readability, fixed question escape bug

--- a/public/style.css
+++ b/public/style.css
@@ -302,10 +302,9 @@ button:disabled {
 }
 
 .message .author {
-  align-self: flex-end;
   color: #444;
   font-size: 12px;
-  font-style: italic;
+  font-weight: bold;
 }
 
 .sent {
